--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1199,4 +1199,5 @@ nav.woocommerce-MyAccount-navigation ul li{
     z-index: 9999;
     background: url('images/pageLoader.gif') 50% 50% no-repeat rgb(249,249,249);
     opacity: .8;
+    display: none;
 }
