--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1209,3 +1209,7 @@ nav.woocommerce-MyAccount-navigation ul li{
 .subjects {
 	margin: 0 0 1em 0;
 }
+
+.one-on-tutoring .one-on-form .form-inline .choose-file .add-more{
+    margin: 0 0 0 0.5em;
+}
