--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1307,7 +1307,7 @@ input[type="range"].range-slider__range {
   text-align: center;
   border-radius: 3px;
   background: #fff;
-  padding: 5px 10px;
+  padding: 0;
   margin:0;
 }
 
