--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1265,14 +1265,12 @@ ul.exam-prep-results li.result-box,
 ul.oneonone-results li.result-box{
    padding:0.5em;
    border: 1px solid #999;
-    margin:10px;
-    width: 30%;
+   margin: 10px 10px 0 0;
+   width: 32.3%;
     box-sizing: border-box;
 }
 
-/*ul.exam-prep-results li.result-box:nth-child(odd){
-	margin:10px 25px 25px 0;
-}*/
+
 ul.exam-prep-results a.button,
 ul.oneonone-results a.button{
    background: #f36f44;
@@ -1283,7 +1281,7 @@ ul.oneonone-results a.button{
    font-size: 13px;
    line-height: 1.5;
    font-weight: normal;
-   float: right;
+   /*float: right;*/
 }
 
 ul.exam-prep-results a.button:hover,
@@ -1296,14 +1294,14 @@ ul.exam-prep-results li .course-title,
 ul.oneonone-results li .course-title{margin: 0;font-size: 18px; word-wrap: break-word;}
 
 
-.range-slider{
+/*.range-slider{
 	padding: 5px;
-}
+}*/
 
 input[type="range"].range-slider__range {
   -webkit-appearance: none;
   display: inline;
-  width:66%;
+  width:76%;
   height:5px;
   border-radius: 5px;
   background:#f36f44;
@@ -1388,3 +1386,31 @@ input[type="range"].range-slider__range {
 }    
 
 .curriculum-select {padding:0 15px 0 0;}
+
+.result-box a.glyphicon-facetime-video{
+	font-size: 3em;
+}
+
+ul.oneonone-results li.result-box .tutor-profile{
+	width: 150px;
+    display: inline-block;
+}
+
+ul.oneonone-results li.result-box .tutor-info{
+    display: inline-block;
+    width: calc(100% - 43%);
+    vertical-align: top;
+}
+
+.update-avatar input[type="submit"]{
+	padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+    background: #f36f44;
+    border-color: #ab4f27;
+}
+
+.update-avatar img{
+	margin: 1em 0;
+}
