--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -765,16 +765,17 @@ p.chzn-drop select.select{
 
 .one-on-one-button{
 	margin:0 0 5px 0;
+	display: block !important;
 }
 
-.one-on-one-button button.vc_btn3.vc_btn3-color-warning{
-	background:#f37631;
-	border: 0;
+.one-on-one-button a{
+    background-color: #f37633 !important;	
+    border:0 !important;
 }
 
-.exam-prep button.vc_btn3.vc_btn3-color-inverse{
-	background:#67757f;
-	padding:1.3em 3em 1em 2.8em;
+.exam-prep a{
+	background:#67757e !important;
+	padding:1em 2.5em !important;
 	border: 0;
 }
 
@@ -782,6 +783,14 @@ p.sublinks{
 	margin:10px auto;
     	width: 70%;
 	font-weight: bold;
+}
+
+.aws-container .aws-search-field{
+	margin: 0 auto;
+    width: 50%;
+    color:#40535f;
+    font-size: 14px;
+    height: 50px;
 }
 
 .search-courses-form{
@@ -1413,4 +1422,8 @@ ul.oneonone-results li.result-box .tutor-info{
 
 .update-avatar img{
 	margin: 1em 0;
+}
+
+.ls-wp-container{
+	height: 200px;
 }
