--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -18,6 +18,7 @@
 
 body.page-template-template-home .wh-content{padding:10px 0 0 0;}
 
+a{cursor: pointer;}
 
 .mar-top-10 {
     margin: 10px 0 0 0;
