--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1519,9 +1519,20 @@ ul.oneonone-results li.result-box .tutor-info{
 .woocommerce div.product div.summary{
 	width: 100%;
 	float: none;
+    border: 1px solid #ccc;
+    padding: 0.5em;
 }
 
 .cbp-row.wh-page-title-bar{display: none;}
 
 .woocommerce div.product .product_title:after, 
-.woocommerce div.product .comment-reply-title:after{background: transparent;}
+.woocommerce div.product .comment-reply-title:after{background: transparent;display: none;}
+
+.course-video-box h3{
+	margin: 0 0 0.5em 0;
+	line-height: 1;
+}
+
+.course-info h2{
+	color: #D8621D;
+}
