--- a/wp-content/plugins/videojs-html5-player/videojs/video-js.css
+++ b/wp-content/plugins/videojs-html5-player/videojs/video-js.css
@@ -212,7 +212,7 @@
 .video-js.vjs-fluid, .video-js.vjs-16-9, .video-js.vjs-4-3 {
   width: 100%;
   max-width: 100%;
-  /*height: 0;*/ }
+  height: 0; }
 
 .video-js.vjs-16-9 {
   padding-top: 56.25%; }
