--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -52,7 +52,7 @@ input[type="button"].cancel-btn{
 }
 
 input[type="button"].cancel-btn:hover{
-	background: #f36f44;
+	background: #D8621D;
     border-color: #ab4f27;
 }
 
@@ -492,9 +492,8 @@ p.field-para input[type="text"],
     	font-weight: normal;
 }
 
-.btn-primary,
-.woocommerce button.button.alt.attend-session-btn{
-    background: #f36f44;
+.btn-primary{
+    background: #D8621D;
     border-color: #ab4f27;
 }
 
@@ -695,7 +694,7 @@ select.select{
 }
 
 .btn-primary {
-    background: #f36f44;
+    background: #D8621D;
     border-color: #ab4f27;
 }
 
@@ -988,7 +987,7 @@ nav.woocommerce-MyAccount-navigation ul li{
 }
 
 .woocommerce-Button.button.save{
-    background: #f36f44;
+    background: #D8621D;
     border-color: #ab4f27;
     padding: 5px 10px;
     font-size: 12px;
@@ -1302,7 +1301,7 @@ ul.oneonone-results li.result-box{
 
 ul.exam-prep-results a.button,
 ul.oneonone-results a.button{
-   background: #f36f44;
+   background: #D8621D;
    border-color: #ab4f27;
    padding:5px 10px;
    border-radius: 3px;
@@ -1333,7 +1332,7 @@ input[type="range"].range-slider__range {
   width:76%;
   height:5px;
   border-radius: 5px;
-  background:#f36f44;
+  background:#D8621D;
   outline: none;
   padding: 0;
   margin: 0;
@@ -1436,7 +1435,7 @@ ul.oneonone-results li.result-box .tutor-info{
     font-size: 12px;
     line-height: 1.5;
     border-radius: 3px;
-    background: #f36f44;
+    background: #D8621D;
     border-color: #ab4f27;
 }
 
@@ -1538,3 +1537,16 @@ ul.oneonone-results li.result-box .tutor-info{
 	color: #D8621D;
 }
 
+.woocommerce button.button.alt.attend-session-btn{
+    background: #D8621D;
+    border-color: #ab4f27;
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
+
+.woocommerce button.button.alt.attend-session-btn:hover{
+	background:#44545E;
+    border-color:#44545E;
+}
