--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1537,9 +1537,8 @@ ul.oneonone-results li.result-box .tutor-info{
 }
 
 .course-video-box{
-	border-left:1px solid #D8621D;
-	margin: 2em 0 0 0;
-	 min-height: 200px;
+	margin: 3em 0 0 0;
+    min-height: 290px;
 }
 
 .course-info{
@@ -1548,8 +1547,18 @@ ul.oneonone-results li.result-box .tutor-info{
     min-height: 200px;
 }
 
+.price-box,
 .course-discription{
 	margin:2em 0 0 0;
+}
+
+.availability-content span{
+	display:inline-block;
+	width: 40%;
+}
+
+.availability-content span strong{
+	margin:0 12% 0 0;
 }
 
 .course-detail h2{
@@ -1648,4 +1657,9 @@ ul.oneonone-results li.result-box .tutor-info{
 
 .left-slider{
 	height:319px !important;
+}
+
+.related-tutors{
+	list-style-type:none;
+	padding:0;
 }
